--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -6,9 +6,9 @@
 // @import "node_modules/bootswatch/dist/cosmo/variables";
 // @import "node_modules/bootswatch/dist/cyborg/variables";
 // @import "node_modules/bootswatch/dist/darkly/variables";
-@import "node_modules/bootswatch/dist/flatly/variables";
+// @import "node_modules/bootswatch/dist/flatly/variables";
 // @import "node_modules/bootswatch/dist/journal/variables";
-// @import "node_modules/bootswatch/dist/litera/variables";
+@import "node_modules/bootswatch/dist/litera/variables";
 // @import "node_modules/bootswatch/dist/lumen/variables";
 // @import "node_modules/bootswatch/dist/lux/variables";
 // @import "node_modules/bootswatch/dist/materia/variables";
@@ -35,29 +35,29 @@
 @import "node_modules/bootstrap/scss/code";
 @import "node_modules/bootstrap/scss/grid";
 @import "node_modules/bootstrap/scss/tables";
-// @import "node_modules/bootstrap/scss/forms";
+@import "node_modules/bootstrap/scss/forms";
 @import "node_modules/bootstrap/scss/buttons";
-// @import "node_modules/bootstrap/scss/transitions";
-// @import "node_modules/bootstrap/scss/dropdown";
-// @import "node_modules/bootstrap/scss/button-group";
-// @import "node_modules/bootstrap/scss/input-group";
-// @import "node_modules/bootstrap/scss/custom-forms";
+@import "node_modules/bootstrap/scss/transitions";
+@import "node_modules/bootstrap/scss/dropdown";
+@import "node_modules/bootstrap/scss/button-group";
+@import "node_modules/bootstrap/scss/input-group";
+@import "node_modules/bootstrap/scss/custom-forms";
 @import "node_modules/bootstrap/scss/nav";
 @import "node_modules/bootstrap/scss/navbar";
 @import "node_modules/bootstrap/scss/card";
-// @import "node_modules/bootstrap/scss/breadcrumb";
-// @import "node_modules/bootstrap/scss/pagination";
+@import "node_modules/bootstrap/scss/breadcrumb";
+@import "node_modules/bootstrap/scss/pagination";
 @import "node_modules/bootstrap/scss/badge";
-// @import "node_modules/bootstrap/scss/jumbotron";
-// @import "node_modules/bootstrap/scss/alert";
-// @import "node_modules/bootstrap/scss/progress";
-// @import "node_modules/bootstrap/scss/media";
-// @import "node_modules/bootstrap/scss/list-group";
-// @import "node_modules/bootstrap/scss/close";
-// @import "node_modules/bootstrap/scss/modal";
-// @import "node_modules/bootstrap/scss/tooltip";
-// @import "node_modules/bootstrap/scss/popover";
-// @import "node_modules/bootstrap/scss/carousel";
+@import "node_modules/bootstrap/scss/jumbotron";
+@import "node_modules/bootstrap/scss/alert";
+@import "node_modules/bootstrap/scss/progress";
+@import "node_modules/bootstrap/scss/media";
+@import "node_modules/bootstrap/scss/list-group";
+@import "node_modules/bootstrap/scss/close";
+@import "node_modules/bootstrap/scss/modal";
+@import "node_modules/bootstrap/scss/tooltip";
+@import "node_modules/bootstrap/scss/popover";
+@import "node_modules/bootstrap/scss/carousel";
 @import "node_modules/bootstrap/scss/utilities";
 
 //// bootswatch theme overrides
@@ -65,9 +65,9 @@
 // @import "node_modules/bootswatch/dist/cosmo/bootswatch";
 // @import "node_modules/bootswatch/dist/cyborg/bootswatch";
 // @import "node_modules/bootswatch/dist/darkly/bootswatch";
-@import "node_modules/bootswatch/dist/flatly/bootswatch";
+// @import "node_modules/bootswatch/dist/flatly/bootswatch";
 // @import "node_modules/bootswatch/dist/journal/bootswatch";
-// @import "node_modules/bootswatch/dist/litera/bootswatch";
+@import "node_modules/bootswatch/dist/litera/bootswatch";
 // @import "node_modules/bootswatch/dist/lumen/bootswatch";
 // @import "node_modules/bootswatch/dist/lux/bootswatch";
 // @import "node_modules/bootswatch/dist/materia/bootswatch";
@@ -85,15 +85,71 @@
 
 // page-level layout
 
+// OVERRIDES
 .App {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  color: #000;
 
   & > .pageContent {
     flex: 1;
     overflow: auto;
     padding-top: 10px;
+  }
+}
+
+.navbar {
+  background: #f7df1e;
+  a {
+    color: #000;
+    &:hover {
+      color: #000;
+    }
+  }
+  a.navbar-brand {
+    color: #000;
+    &:hover {
+      color: #000;
+    }
+
+    &:hover:after {
+      width: 100%;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0%;
+      border-bottom: 2px solid #000;
+      transition: 0.4s;
+    }
+  }
+}
+
+a {
+  color: #f7df1e;
+  text-decoration: none;
+  position: relative;
+
+  &:hover {
+    color: #f7df1e;
+  }
+
+  &:hover:after {
+    width: 100%;
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    border-bottom: 2px solid #f7df1e;
+    transition: 0.4s;
   }
 }
 
@@ -103,4 +159,12 @@
   & > * {
     padding-left: 10px;
   }
+}
+
+.card {
+  border: 0;
+}
+
+.repl-embed {
+  margin: 50px auto;
 }
